# korali

./: .gitignore  install  meson.build  todo.md
docs/source/: index.rst
examples/bayesian.inference/latent/: run-saem-gaussian-mixture.py
examples/bayesian.inference/reference/: run-multinest.py
examples/features/checkpoint.resume/: run-gfpt.py
examples/learning/reinforcement/ABF2D/: run-ddpg.py  run-gfpt.py
examples/learning/reinforcement/ABF2D/_model/: abf.py
examples/learning/reinforcement/cartpole/: run-ddpg.py  run-dqn.py  run-gfpt.py
examples/learning/reinforcement/lander/: .run_test.sh  run-gfpt.py
examples/learning/reinforcement/upswing/: run-ddpg-double.py  run-ddpg-single.py  run-gfpt-double.py  run-gfpt-single.py
examples/learning/supervised/: run-sin.py
examples/learning/supervised/sineWave/: .run_test.sh
examples/study.cases/ABF3D/: run-gfpt.cpp  run-vracer.cpp
examples/study.cases/microswimmers/: run-korali.cpp
examples/study.cases/openAIGym/: .run_test.sh  run-ddpg.py  run-gfpt.py  run-vracer.py
source/: Makefile  meson.build  setup.py
source/auxiliar/: kcache.hpp  math.cpp  math.hpp
source/modules/: meson.build  module.cpp
source/modules/neuralNetwork/: neuralNetwork._cpp  neuralNetwork._hpp
source/modules/neuralNetwork/layer/: layer._cpp  layer._hpp  layer.config
source/modules/problem/sampling/: sampling.config
source/modules/solver/agent/: agent._cpp  agent._hpp  agent.config
subprojects/: dnnl.wrap
subprojects/gsl/: meson.build
tools/rlview/: __main__.py
tools/style/: style_cxx.sh
(+20 files in other folders)
